WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237015
Fix for crash in several AX LayoutTests in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=237015
Summary
Fix for crash in several AX LayoutTests in isolated tree mode.
Andres Gonzalez
Reported
2022-02-21 19:13:56 PST
Fix for crash in several AX LayoutTests in isolated tree mode.
Attachments
Patch
(1.83 KB, patch)
2022-02-21 19:22 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-21 19:14:08 PST
<
rdar://problem/89270397
>
Andres Gonzalez
Comment 2
2022-02-21 19:22:42 PST
Created
attachment 452815
[details]
Patch
Chris Dumez
Comment 3
2022-02-21 19:29:57 PST
Comment on
attachment 452815
[details]
Patch R=me
EWS
Comment 4
2022-02-22 08:09:27 PST
Committed
r290308
(
247631@main
): <
https://commits.webkit.org/247631@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452815
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug