Fix for crash in several AX LayoutTests in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=237015

Reviewed by Chris Dumez.

Follow up to https://bugs.webkit.org/show_bug.cgi?id=236748.

The iteration over the object's children has to happen over a copy
because the children vector can change during the traversal of the tree.

* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::collectNodeChangesForSubtree):



Canonical link: https://commits.webkit.org/247631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290308 268f45cc-cd09-0410-ab3c-d52691b4dbfc